@@ -6,35 +6,32 @@
 
 \description{Smooth a section in the lateral (alpha version that may change)}
 
-\usage{sectionSmooth(section, df, debug=getOption("oceDebug"), ...)}
+\usage{sectionSmooth(section, method=c("spline", "barnes"), debug=getOption("oceDebug"), ...)}
 
 \arguments{
-  \item{section}{a \code{section} object containing the section to be smoothed}
-  \item{df}{optional value for \code{df}, used by
-    \code{\link{smooth.spline}}.  If not supplied, this is set to the
-    number of stations, divided by 5.}
-  \item{debug}{a flag that turns on debugging.  Set to 1 to get a
-    moderate amount of debugging information, or to 2 to get more.}
-  \item{...}{optional arguments to be supplied to \code{\link{smooth.spline}}.}
+    \item{section}{a \code{section} object containing the section to be smoothed.
+        For \code{method="spline"}, the pressure levels must match for each
+        station in the section.}
+    \item{method}{specifies the method to use; see \sQuote{Details}.}
+    \item{debug}{a flag that turns on debugging.  Set to 1 to get a
+        moderate amount of debugging information, or to 2 to get more.}
+    \item{\dots}{optional extra arguments, passed to either
+        \code{\link{smooth.spline}} or \code{\link{interpBarnes}}.}
 }
-\details{
 
-\strong{This is a preliminary version of this function, and it may
-change in future versions.  In particular, this function may get the
-ability to smooth in the vertical also, and perhaps additional
-smoothing methods should be allowed.}
+\details{For \code{method="spline"}, the section is smoothed using
+    \code{\link{smooth.spline}} on individual pressure levels, with any
+    parameters listed in \code{parameters} being passed to that function.  If
+    \code{df} is not present in \code{parameters}, then this function sets it
+    to the number of stations divided by 5.  Smoothing is done separately for
+    temperature, salinity, and sigma-theta.
 
-The section is smoothed using \code{\link{smooth.spline}} on
-individual pressure levels.  This is done for temperature, salinity,
-and sigma-theta individually.  (\strong{This may change; perhaps
-sigma-theta should be calculated from the smoothed temperature and
-salinity.})
+    For \code{method="barnes"}, \code{\link{interpBarnes}} is used to construct
+    a grid, with any arguments in \code{\dots} being passed to that function;
+    see \sQuote{Examples}.
 
-The \code{...} arguments will be passed to the spline routine,
-allowing the user to control the spline as desired.  If no \code{...}
-arguments are supplied, \code{sectionSmooth} will set \code{df} to
-the number of stations divided by 5, which could be interpreted as
-smoothing across 5 adjacent stations.
+    The \code{barnes} method is generally an order of magnitude slower than the
+    \code{spline} method, but it has the advantage of being closer to a standard.
 
 }
 
@@ -46,13 +43,14 @@ has less lateral variation than the input section.}
     with them.}
 
 \examples{
-# Eastern North Atlantic, showing Mediterranean water. 
 library(oce)
 data(coastlineWorld)
 data(a03)
-s <- sectionGrid(subset.oce(a03, indices=90:3), p=seq(00, 2500, 100))
-ss <- sectionSmooth(s, df=8)
-plot(ss,coastline=coastlineWorld,map.xlim=c(-75,0))
+gs <- sectionGrid(subset.oce(a03, indices=124:102), p=seq(0, 5000, 150))
+gss1 <- sectionSmooth(gs, "spline", df=16)
+plot(gss1, coastline=coastlineWorld, map.xlim=c(-80,-55))
+gss2 <- sectionSmooth(gs, "barnes", xr=24, yr=100)
+plot(gss2, coastline=coastlineWorld, map.xlim=c(-80,-55))
 }
 
 \author{Dan Kelley}
